--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(byteflux
     src/main.cpp
     src/validator.cpp
+    src/copyengine.cpp
+    src/ioprocess.cpp
 )
